--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,20 +1,24 @@
-.container{
-width:96%;
-}
 
-header h1{
-text-align:center;
-}
+@media (min-width:320px){
 
-header img{
-max-width:50%;
-}
-
-.sacola{
-display:none;
-}
-
-.menu-opcoes{
-position:static;
-text-align:center;
-}
+    .container{
+    width:96%;
+    }
+    
+    header h1{
+    text-align:center;
+    }
+    
+    header h1 img{
+    max-width:50%;
+    }
+    
+    .sacola{
+    display:none;
+    }
+    
+    .menu-opcoes{
+    position:static;
+    text-align:center;
+    }
+    }
